src/assets/main.css
/* @import './base.css'; */
/* 
Colour scheme (lightest to darkest)
1. F7FBFC
2. #D6E6F2
3. B9D7EA
4. #769FCD
*/
body {
   margin: 0;
   padding: 0;
 }

#app {
  min-width: 100%;
  min-height: 100vh;
  overflow-x: hidden;
  background-color: lightgray;
  border-radius: 3px;
  font-weight: normal;
  font-family: 'Roboto', sans-serif;
  display: flex;
  flex-direction: column;
}

.navbarBorder {
  border: 5px solid #D6E6F2;
  border-radius: 3px;
}

.companyFont {
  font-size: 30px;
}

.buttonFont {
  font-size: 18px;
}

/* a,
.green {
  text-decoration: none;
  color: hsla(160, 100%, 37%, 1);
  transition: 0.4s;
  padding: 3px;
}

@media (hover: hover) {
  a:hover {
    background-color: hsla(160, 100%, 37%, 0.2);
  }
}

@media (min-width: 1024px) {
  body {
    display: flex;
    place-items: center;
  }

  #app {
    display: grid;
    grid-template-columns: 1fr 1fr;
    padding: 0 2rem;
  }
} */

